# font-front

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  test_string.txt
src/: CMakeLists.txt  atlas.h  blueprints.h  glfw_helpers.h  library.h  main.cpp  rendering.h  scope_guards.h  shader.cpp  shader.h  shader_strings.h  skyline_binpack.cpp  skyline_binpack.h  spec.h  test_strings.h  text.h  types.h  utlz.h
src/fontbin/: notosans_math.h  notosans_regular.h
src/icu_extra/: scrptrun.h
